# gpu_logger_poc

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: gpu_monitor.rs  lib.rs  logger.rs  main.rs
tests/: integration_test.rs
