[package]
name = "gpu_logger_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.1", features = ["cuda"] }
rdkafka = { version = "0.37", features = ["cmake-build"] }
tokio = { version = "1.42", features = ["full", "macros", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"

[[bin]]
name = "llm-service"
path = "src/main.rs" 